Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.9.2
Description
The MTR test encryption.innodb-redo-nokeys fails with
mariadbd: /data/Server/10.9/storage/innobase/log/log0recv.cc:2921: buf_block_t* recv_recover_page(buf_block_t*, mtr_t&, const iterator&, fil_space_t*, mlog_init_t::init*): Assertion `l->lsn <= log_sys.get_lsn()' failed.
|
|
|
Thread 2 (Thread 2532084.2532368):
|
#0 __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
|
#1 0x00007f3c35d10859 in __GI_abort () at abort.c:79
|
#2 0x00007f3c35d10729 in __assert_fail_base (fmt=0x7f3c35ea6588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x55eb75e86d00 "l->lsn <= log_sys.get_lsn()", file=0x55eb75e82060 "/data/Server/10.9/storage/innobase/log/log0recv.cc", line=2921, function=<optimized out>) at assert.c:92
|
#3 0x00007f3c35d21f36 in __GI___assert_fail (assertion=0x55eb75e86d00 "l->lsn <= log_sys.get_lsn()", file=0x55eb75e82060 "/data/Server/10.9/storage/innobase/log/log0recv.cc", line=2921, function=0x55eb75e86940 "buf_block_t* recv_recover_page(buf_block_t*, mtr_t&, const iterator&, fil_space_t*, mlog_init_t::init*)") at assert.c:101
|
#4 0x000055eb74b0e7ce in recv_recover_page (block=0x7f3c31ad01a0, mtr=..., p=Traceback (most recent call last):
|
File "/lib/x86_64-linux-gnu/../../share/gcc/python/libstdcxx/v6/printers.py", line 1548, in __call__
|
return self.lookup[basename].invoke(val)
|
File "/lib/x86_64-linux-gnu/../../share/gcc/python/libstdcxx/v6/printers.py", line 1485, in invoke
|
return self.function(self.name, value)
|
File "/lib/x86_64-linux-gnu/../../share/gcc/python/libstdcxx/v6/printers.py", line 649, in __init__
|
self.link_type = nodetype.pointer()
|
AttributeError: 'NoneType' object has no attribute 'pointer'
|
..., space=0x612000023a40, init=0x0) at /data/Server/10.9/storage/innobase/log/log0recv.cc:2921
|
#5 0x000055eb74b105e6 in recv_recover_page (space=0x612000023a40, bpage=0x7f3c31ad01a0) at /data/Server/10.9/storage/innobase/log/log0recv.cc:3195
|
#6 0x000055eb74f0cba5 in buf_page_t::read_complete (this=0x7f3c31ad01a0, node=...) at /data/Server/10.9/storage/innobase/buf/buf0buf.cc:3697
|
#7 0x000055eb75027b15 in fil_aio_callback (request=...) at /data/Server/10.9/storage/innobase/fil/fil0fil.cc:2889
|
#8 0x000055eb74b9984b in io_callback (cb=0x631000026a58) at /data/Server/10.9/storage/innobase/os/os0file.cc:3512
|
#9 0x000055eb75152800 in tpool::task_group::execute (this=0x612000023650, t=0x631000026ab0) at /data/Server/10.9/tpool/task_group.cc:55
|
#10 0x000055eb751530c9 in tpool::task::execute (this=0x631000026ab0) at /data/Server/10.9/tpool/task.cc:32
|
#11 0x000055eb7513f70b in tpool::thread_pool_generic::worker_main (this=0x618000000880, thread_var=0x63000001fd80) at /data/Server/10.9/tpool/tpool_generic.cc:588
|
#12 0x000055eb75152261 in std::__invoke_impl<void, void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__f=@0x604000000a68: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x55eb7513f528 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>, __t=@0x604000000a60: 0x618000000880) at /usr/include/c++/9/bits/invoke.h:73
|
--Type <RET> for more, q to quit, c to continue without paging--
|
#13 0x000055eb7515200c in std::__invoke<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> (__fn=@0x604000000a68: (void (tpool::thread_pool_generic::*)(class tpool::thread_pool_generic * const, struct tpool::worker_data *)) 0x55eb7513f528 <tpool::thread_pool_generic::worker_main(tpool::worker_data*)>) at /usr/include/c++/9/bits/invoke.h:95
|
#14 0x000055eb75151e9d in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::_M_invoke<0ul, 1ul, 2ul> (this=0x604000000a58) at /usr/include/c++/9/thread:244
|
#15 0x000055eb75151de7 in std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> >::operator() (this=0x604000000a58) at /usr/include/c++/9/thread:251
|
#16 0x000055eb75151d4c in std::thread::_State_impl<std::thread::_Invoker<std::tuple<void (tpool::thread_pool_generic::*)(tpool::worker_data*), tpool::thread_pool_generic*, tpool::worker_data*> > >::_M_run (this=0x604000000a50) at /usr/include/c++/9/thread:195
|
#17 0x00007f3c3611fde4 in ?? () from /lib/x86_64-linux-gnu/libstdc++.so.6
|
#18 0x00007f3c3623a609 in start_thread (arg=<optimized out>) at pthread_create.c:477
|
#19 0x00007f3c35e0d293 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
|
|
|
pluto:/data/49
|
_RR_TRACE_DIR=log/mysqld.1.rr rr replay
|
|
|
origin/10.9 commit baef53a70c675da6d19ac3c7f23c7b8b4ed8458c
|
|
|
|
Attachments
Issue Links
- is caused by
-
MDEV-14425 Change the InnoDB redo log format to reduce write amplification
-
- Closed
-